Try fixing overflow error on mobile

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -354,11 +354,10 @@ header {
         transition: max-height 0.6s cubic-bezier(0.5, 0, 0.5, 1); } }
 @media only screen and (max-width: 570px) {
   #bottom-nav div > a {
-    flex-basis: 90% !important; }
+    flex-basis: 85% !important; }
   #bottom-nav div > .expand {
-    flex-basis: 10% !important;
-    min-width: 10%;
-    text-align: left; } }
+    flex-basis: 15% !important;
+    text-align: right; } }
 main {
   z-index: 6; }
   main section > * {
